--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -4,7 +4,7 @@ body {
   overflow: hidden;
   margin: 0;
   color: $color;
-  font-family: 'Ubuntu Mono', monospace;
+  font-family: 'Share Tech Mono', monospace;
   font-weight: 700;
   font-size: 1rem;
   text-shadow: $shadow-glow;
@@ -54,7 +54,7 @@ body {
     background: radial-gradient(
       ellipse at center,
       rgba($gradient-bottom, 0) 0%,
-      rgba($gradient-bottom, 0.6) 100%
+      rgba($gradient-bottom, 0.3) 100%
     );
     pointer-events: none;
   }
