--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 $background-color: #000;
 $color: #fff;
 $base-unit: 25rem;
-$font-size: 16px;
+$font-size: 14px;
 $primary-color: black;
 $secondary-color: #888;
 $interlace-background: linear-gradient(#777 50%, #000 50%);
